EFL's LayoutTestController does not implement callShouldCloseOnWebView https://bugs.webkit.org/show_bug.cgi?id=82301

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-04-17
Reviewed by Martin Robinson.

Source/WebKit/efl:

Implement callShouldCloseOnWebView in EFL's LayoutTestController by
calling shouldClose() on the FrameLoader, allowing the related
test to be removed from the skip list.

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::callShouldCloseOnWebView):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

Implement callShouldCloseOnWebView in EFL's LayoutTestController by
calling shouldClose() on the FrameLoader, allowing the related test
to be removed from the skip list.

* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::callShouldCloseOnWebView):

LayoutTests:

Implement callShouldCloseOnWebView in EFL's LayoutTestController by
calling shouldClose() on the FrameLoader, allowing the related test
to be removed from the skip list.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/101690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114422 268f45cc-cd09-0410-ab3c-d52691b4dbfc